fixed footer alignment

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -22,4 +22,5 @@
   --ifm-footer-background-color: #000000;
   --ifm-footer-link-hover-color: #ffffff;
   --ifm-link-hover-decoration: underline;
+    text-align: center;
 }
